--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,7 @@
 
 <footer class="footer py-4 js-page-footer">
   <div class="main">
+    {%- include collapse.html -%}
 
     {%- assign _site_author = site.author -%}
     {%- if _site_author.type == 'organization' -%}
